@@ -2,7 +2,8 @@ typedef int flag_t;
 
 struct nncards {
 	enum { RUN, NORUN, ERROR } run_state;
-	char* cardfile;
+	char** cardfile;
+	int filenum;
 	enum { TERM, DEFINITION } first_side;
 	flag_t random;
 };
