@@ -2,4 +2,4 @@
 
 void tui_update_size(void);
 void tui_draw_card(char* str);
-void tui_draw_info(char* filename, int currcard, int cardnum);
+void tui_draw_info(int currcard, int cardnum, char** files, int filenum);
